--- a/mhw1.css
+++ b/mhw1.css
@@ -119,7 +119,7 @@ a:visited{
 .image_header{
     width: 100%;
     height: 100%;
-    background-image: url("giorgio-trovato-11lavI4X1M0-unsplash.jpg");
+    background-image: url("https://github.com/mbusacca98/mhw1/blob/main/giorgio-trovato-11lavI4X1M0-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -216,7 +216,7 @@ a:visited{
 }
 
 .offerta .image1{
-    background-image: url(pexels-photomix-company-887751.jpg);
+    background-image: url(https://github.com/mbusacca98/mhw1/blob/main/pexels-photomix-company-887751.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -262,14 +262,14 @@ a:visited{
 }
 
 .offerta .image2{
-    background-image: url(pexels-frans-van-heerden-632470.jpg);
+    background-image: url(https://github.com/mbusacca98/mhw1/blob/main/pexels-frans-van-heerden-632470.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
 
 .offerta .image3{
-    background-image: url(pexels-life-of-pix-4291.jpg);
+    background-image: url(https://github.com/mbusacca98/mhw1/blob/main/pexels-life-of-pix-4291.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
